--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="ramen">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
-    <title>Late Replies Rock</title>
+    <title> Hi </title>
     
     <!-- FAV and TOUCH ICONS -->
     <link rel="shortcut icon" href="images/ico/favicon.ico">
